--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "illuminate/support": "5.*|6.*",
+        "illuminate/support": "6.*",
         "guzzlehttp/guzzle": "^6.1",
-        "symfony/dom-crawler": "^4.0|^5.0",
-        "symfony/css-selector": "^4.0|^5.0"
+        "symfony/dom-crawler": "^5.0",
+        "symfony/css-selector": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
